# ieee1905-rs

./: .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  cliff.toml  deny.toml  docker-compose.yaml  release.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS
.github/workflows/: functional_test_on_demand.yml  rust-cargo-audit.yml  rust-cargo-clippy.yml  rust-cargo-coverage.yml  rust-cargo-deny.yml  rust-cargo-hack.yml  rust-cargo-tests.yml  rust-rss-check.yml  rust-rss-usage-check.yml
docs/architecture/adr/: 0001-use-rust-ieee1905.md  0002-use-tokio-async.md  0003-observer-cmdu-reception.md  0004-proxy-cmdu-transmission.md  0005-facade-al-sap.md  0006-nom-parsing-serialization.md  0007-virtual-interface-linux-bridge.md  0008-no-per-media-forwarding.md  0009-topology-informational.md  0010-topology-consumed-by-easymesh.md  0011-topology-consistency.md  0012-topology-singleton.md  0013-topology-locking.md  0014-topology-aging.md  0016-observability-convergence.md  0017-failure-isolation.md  0018-backpressure-rate-limiting.md  0019-link-local-ipv6-ip-service-reuse.md  0020-network-namespace-virtual-ethernet-isolation.md
docs/architecture/block_diagram/: block_diagram.drawio
docs/architecture/call_flow_diagram/: IEEE1905_call_flow.drawio
docs/architecture/fsm_diagram/: ieee1905_fsm.drawio
docs/planning/delivery_diagram/: delivery.drawio
examples/: functional_tests_receiver.rs  functional_tests_transmitter.rs  test_release.txt
ieee1905-core/: Cargo.toml
ieee1905-core/benches/: cmdu_handler_bench.rs  cmdu_proxy_bench.rs  cmdu_reassembler_bench.rs  codec_parse_bench.rs
ieee1905-core/src/: al_sap.rs  artifact_exchange_service.rs  cmdu_codec.rs  cmdu_handler.rs  cmdu_message_id_generator.rs  cmdu_observer.rs  cmdu_proxy.rs  cmdu_reassembler.rs  crypto_engine.rs  device_edge_manager.rs  ethernet_receiver.rs  ethernet_subject_reception.rs  ethernet_subject_transmission.rs  fs_quota_aware_storage.rs  interface_manager.rs  lib.rs  linux.rs  lldpdu_codec.rs  lldpdu_observer.rs  lldpdu_proxy.rs  local_http_server.rs  logger.rs  main.rs  rbus.rs  registration_codec.rs  sdu_codec.rs  tlv_cmdu_codec.rs  tlv_lldpdu_codec.rs  topology_manager.rs
ieee1905-core/src/artifact_exchange_service/: client.rs  common.rs  server.rs
ieee1905-core/src/artifact_exchange_service/http/: client.rs  common.rs  fs_quota_aware_storage.rs  server.rs
ieee1905-core/src/artifact_exchange_service/http/server/: get_artifact.rs  get_artifact_list.rs  put_artifact.rs
ieee1905-core/src/artifact_exchange_service/server/: get_artifact.rs  get_artifact_list.rs  put_artifact.rs
ieee1905-core/src/artifact_exchange_service/stub/: client.rs  server.rs
ieee1905-core/src/artifact_service/: artifact_client.rs  artifact_server.rs  client.rs  common.rs  config.rs  server.rs
ieee1905-core/src/artifact_service/server/: get_artifact.rs  get_artifact_list.rs  put_artifact.rs
ieee1905-core/src/http/: artifact_client.rs  artifact_server.rs
ieee1905-core/src/linux/: eth_tool.rs  if_link.rs  mod.rs  nl80211.rs
ieee1905-core/src/logger/: rolling_file_appender.rs
ieee1905-core/src/rbus/: al_device.rs  al_forwarding_table.rs  al_forwarding_table_forwarding_rule.rs  id.rs  interface.rs  interface_len.rs  interface_link.rs  interface_link_len.rs  interface_link_metric.rs  mod.rs  network.rs  network_al.rs  network_al_bridge_tuple.rs  network_al_interface.rs  network_al_interface_ieee1905_neighbor.rs  network_al_interface_l2_neighbor.rs  network_al_interface_link.rs  network_al_interface_link_metric.rs  network_al_interface_non_ieee1905_neighbor.rs  network_al_ipv4.rs  network_al_ipv6.rs  nt.rs  nt_device.rs  nt_device_bridge.rs  nt_device_bridge_len.rs  nt_device_bridge_list.rs  nt_device_id.rs  nt_device_ieee1905_neighbor.rs  nt_device_ieee1905_neighbor_metric.rs  nt_device_interface.rs  nt_device_ipv4.rs  nt_device_ipv6.rs  nt_device_l2_neighbor.rs  nt_device_non_ieee1905_neighbor.rs
ieee1905-tests/: Cargo.toml  Dockerfile  docker-compose.yaml
ieee1905-tests/src/: functional_tests_receiver.rs  functional_tests_transmitter.rs  ieee1905-test-node.rs
ieee1905-tests/tests/: sdu_cmdu_echo_roundtrip.rs
rbus/: Cargo.toml
rbus-core/: Cargo.toml
rbus-core/src/: lib.rs  rbus_handle.rs  rbus_library.rs  rbus_object.rs  rbus_property.rs  rbus_value.rs
rbus-core/src/rbus_handle/: element.rs  error.rs  status.rs
rbus-core/src/rbus_object/: mod.rs
rbus-core/src/rbus_property/: mod.rs
rbus-core/src/rbus_value/: errors.rs  mod.rs  readable.rs  writable.rs
rbus-core/tests/: main.rs
rbus-provider/: Cargo.toml  README.md
rbus-provider/examples/: main.rs
rbus-provider/src/: lib.rs  provider.rs  registry.rs
rbus-provider/src/element/: elements.rs  mod.rs  object.rs  property.rs  table.rs  tuples.rs
rbus-provider/src/registry/: instance.rs
rbus-provider/tests/: nested_tables.rs
rbus-sys/: Cargo.toml  build.rs
rbus-sys/src/: lib.rs
rbus/src/: lib.rs
rbus/src/rbus/: element.rs  error.rs  mod.rs
rbus/src/rbus_object/: mod.rs
rbus/src/rbus_property/: mod.rs
rbus/src/rbus_utils/: mod.rs
rbus/src/rbus_value/: writable.rs
rbus/tests/: main.rs
src/: al_sap.rs  cmdu_codec.rs  cmdu_handler.rs  cmdu_message_id_generator.rs  cmdu_observer.rs  cmdu_proxy.rs  cmdu_reassembler.rs  crypto_engine.rs  device_edge_manager.rs  ethernet_subject_reception.rs  ethernet_subject_transmission.rs  interface_manager.rs  lldpdu_codec.rs  lldpdu_observer.rs  lldpdu_proxy.rs  main.rs  registration_codec.rs  sdu_codec.rs  task_registry.rs  tlv_cmdu_codec.rs  tlv_lldpdu_codec.rs  topology_manager.rs
