[package]
name = "ieee1905-core"
version = "0.1.8"
edition = "2021"
repository = "git@github.com:rdkcentral/ieee1905-rs.git"
license = "Apache-2.0"
#license-file = "LICENSE"
publish = false

[lib]
name = "ieee1905"

[features]
default = []
enable_tokio_console = []

[dependencies]
rbus-core = { path = "../rbus-core" }
rbus-provider = { path = "../rbus-provider" }
pnet = "0.35.0"
nom = "8.0.0"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
console-subscriber = "0.5.0"
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui = "0.19"
crossterm = "0.29.0"
netdev = "0.39.0"
anyhow = "1.0.100"
futures = "0.3"
tokio-util = "0.7.17"
clap = { version = "4.5.53", features = ["derive"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
cryptoki = "0.10"
tracing-appender = "0.2.3"
thiserror = "2.0.16"
indexmap = "2.12.1"
