[package]
name = "ieee1905"
version = "0.4.0"
edition = "2021"
repository = "git@github.com:rdkcentral/ieee1905-rs.git"
license = "Apache-2.0"
#license-file = "LICENSE"
publish = false

[features]
enable_tokio_console = []
rbus = ["rbus-core", "rbus-provider"]
rbus-bundled = [
    "rbus",
    "rbus-core/bundled",
]

[dependencies]
rbus-core = { path = "../rbus-core", optional = true }
rbus-provider = { path = "../rbus-provider", optional = true }
pnet = "0.35.0"
nom = "8.0.0"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
console-subscriber = "0.5.0"
async-trait = "0.1.89"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
ratatui = "0.30"
crossterm = "0.29.0"
netdev = "0.40.0"
anyhow = "1.0.100"
futures = "0.3"
tokio-util = "0.7.17"
clap = { version = "4.5.53", features = ["derive"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
cryptoki = "0.12"
thiserror = "2.0.16"
indexmap = "2.12.1"
neli = { version = "0.7.3", features = ["async"] }
chrono = "0.4.43"
sd-notify = "0.4.5"
either = "1.15.0"

# RUSTSEC transitive dependency overrides
time = ">=0.3.47"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "cmdu_handler_bench"
harness = false

[[bench]]
name = "cmdu_reassembler_bench"
harness = false

[[bench]]
name = "cmdu_proxy_bench"
harness = false

[[bench]]
name = "codec_parse_bench"
harness = false
