[package]
name = "ieee1905"
version = "0.6.0"
edition = "2024"
repository = "git@github.com:rdkcentral/ieee1905-rs.git"
license = "Apache-2.0"
#license-file = "LICENSE"
publish = false

[features]
enable_tokio_console = ["dep:console-subscriber", "tokio/tracing"]
crypto = ["dep:cryptoki"]
topology_ui = ["dep:ratatui", "dep:crossterm"]
artifact_exchange = ["dep:axum", "dep:tower-http", "dep:reqwest", "dep:serde", "dep:serde_json"]
rbus = ["rbus-core", "rbus-provider"]

[dependencies]
rbus-core = { path = "../rbus-core", optional = true }
rbus-provider = { path = "../rbus-provider", optional = true }
pnet = "0.35.0"
netdev = "0.45.0"
nom = "8.0.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal", "fs", "process"] }
console-subscriber = { version = "0.5.0", optional = true }
async-trait = "0.1.89"
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["smallvec", "fmt", "tracing-log", "std", "ansi"] }
tracing-appender = "0.2.4"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29.0", optional = true, features = ["event-stream"] }
anyhow = "1.0.100"
futures = "0.3"
tokio-util = { version = "0.7.17", features = ["codec"] }
clap = { version = "4.5.53", features = ["derive"] }
cryptoki = { version = "0.12", optional = true }
thiserror = "2.0.16"
indexmap = "2.12.1"
neli = { version = "0.7.3", features = ["async"] }
chrono = "0.4.43"
sd-notify = "0.5.0"
either = "1.15.0"
parking_lot = "0.12.5"
axum = { version = "0.8.8", default-features = false, features = ["http1", "tokio", "query", "json"], optional = true }
tower-http = { version = "0.7.0", features = ["trace"], optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["stream", "query", "json"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
tempfile = "3.20.0"

[[bench]]
name = "cmdu_handler_bench"
harness = false

[[bench]]
name = "cmdu_reassembler_bench"
harness = false

[[bench]]
name = "cmdu_proxy_bench"
harness = false

[[bench]]
name = "codec_parse_bench"
harness = false
